[package]
name = "sphinx-packet"
version = "0.1.0"
authors = ["Ania Piotrowska <ania@nymtech.net>", "Dave Hrycyszyn <futurechimp@users.noreply.github.com>", "Jędrzej Stuczyński <andrew@nymtech.net>"]
edition = "2018"
license = "Apache-2.0"
description = "A Sphinx packet implementation in Rust"
repository = "https://github.com/nymtech/sphinx"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.7.4", features = ["ctr"] }
bs58 = "0.4.0"
curve25519-dalek = "3.0.0"
hmac = "0.11.0"
digest = "0.9"
log = "0.4"
rand = {version = "0.7.3", features = ["wasm-bindgen"]}
rand_distr = "0.3"
sha2 = "0.9.1"
hkdf = "0.11.0"
lioness = "0.1.2"
arrayref = "0.3.5"
chacha = "0.3.0"
blake2 = "0.8.0" # cannot be updated due to outdated dependency inside lioness
byteorder = "1.3.2"
subtle = "2.3.0"

[dev-dependencies]
mockall = "0.10.2"
criterion = "0.3"
rand_chacha = "0.2.2"

[[bench]]
name = "benchmarks"
harness = false

